<fix>[setRow style]: added outer spacing

--- a/src/layout/itemSetHighlight.module.css
+++ b/src/layout/itemSetHighlight.module.css
@@ -7,4 +7,5 @@
 .tableRow {
     width: 100%;
     border-spacing: 0 10px;
+    padding: 0 var(--outer_wrapper_margin);
 }
